--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 					<div class="products__list">
 						<div class="products__item">
 							<a href="#" class="products__inner">
-								<div class="products__img"><img src="img/img-products-01.jpg" alt="image description" /></div>
+								<div class="products__img"><div class="products__figure"><img src="img/img-products-01.jpg" alt="image description" /></div></div>
 								<div class="products__content">
 									<h3 class="products__title">Baby Player Fire Kids Edition Tablet</h3>
 									<dl class="products__param">
@@ -229,7 +229,7 @@
 						</div>
 						<div class="products__item">
 							<a href="#" class="products__inner">
-								<div class="products__img"><img src="img/img-products-02.jpg" alt="image description" /></div>
+								<div class="products__img"><div class="products__figure"><img src="img/img-products-02.jpg" alt="image description" /></div></div>
 								<div class="products__content">
 									<h3 class="products__title">Baby Player Ladybird</h3>
 									<dl class="products__param">
@@ -242,7 +242,7 @@
 						</div>
 						<div class="products__item">
 							<a href="#" class="products__inner">
-								<div class="products__img"><img src="img/img-products-03.jpg" alt="image description" /></div>
+								<div class="products__img"><div class="products__figure"><img src="img/img-products-03.jpg" alt="image description" /></div></div>
 								<div class="products__content">
 									<h3 class="products__title">Baby Player Ladybird for education</h3>
 									<dl class="products__param">
@@ -255,7 +255,7 @@
 						</div>
 						<div class="products__item">
 							<a href="#" class="products__inner">
-								<div class="products__img"><img src="img/img-products-04.jpg" alt="image description" /></div>
+								<div class="products__img"><div class="products__figure"><img src="img/img-products-04.jpg" alt="image description" /></div></div>
 								<div class="products__content">
 									<h3 class="products__title">Baby Player Ladybird for education your baby</h3>
 									<dl class="products__param">
@@ -268,7 +268,7 @@
 						</div>
 						<div class="products__item">
 							<a href="#" class="products__inner">
-								<div class="products__img"><img src="img/img-products-05.jpg" alt="image description" /></div>
+								<div class="products__img"><div class="products__figure"><img src="img/img-products-05.jpg" alt="image description" /></div></div>
 								<div class="products__content">
 									<h3 class="products__title">Baby Player Ladybird</h3>
 									<dl class="products__param">
@@ -281,7 +281,7 @@
 						</div>
 						<div class="products__item">
 							<a href="#" class="products__inner">
-								<div class="products__img"><img src="img/img-products-06.jpg" alt="image description" /></div>
+								<div class="products__img"><div class="products__figure"><img src="img/img-products-06.jpg" alt="image description" /></div></div>
 								<div class="products__content">
 									<h3 class="products__title">Baby Player Ladybird</h3>
 									<dl class="products__param">
@@ -294,7 +294,7 @@
 						</div>
 						<div class="products__item">
 							<a href="#" class="products__inner">
-								<div class="products__img"><img src="img/img-products-01.jpg" alt="image description" /></div>
+								<div class="products__img"><div class="products__figure"><img src="img/img-products-01.jpg" alt="image description" /></div></div>
 								<div class="products__content">
 									<h3 class="products__title">Baby Player Fire Kids Edition Tablet</h3>
 									<dl class="products__param">
@@ -307,7 +307,7 @@
 						</div>
 						<div class="products__item">
 							<a href="#" class="products__inner">
-								<div class="products__img"><img src="img/img-products-02.jpg" alt="image description" /></div>
+								<div class="products__img"><div class="products__figure"><img src="img/img-products-02.jpg" alt="image description" /></div></div>
 								<div class="products__content">
 									<h3 class="products__title">Baby Player Ladybird</h3>
 									<dl class="products__param">
@@ -320,7 +320,7 @@
 						</div>
 						<div class="products__item">
 							<a href="#" class="products__inner">
-								<div class="products__img"><img src="img/img-products-03.jpg" alt="image description" /></div>
+								<div class="products__img"><div class="products__figure"><img src="img/img-products-03.jpg" alt="image description" /></div></div>
 								<div class="products__content">
 									<h3 class="products__title">Baby Player Ladybird for education</h3>
 									<dl class="products__param">
@@ -333,7 +333,7 @@
 						</div>
 						<div class="products__item">
 							<a href="#" class="products__inner">
-								<div class="products__img"><img src="img/img-products-04.jpg" alt="image description" /></div>
+								<div class="products__img"><div class="products__figure"><img src="img/img-products-04.jpg" alt="image description" /></div></div>
 								<div class="products__content">
 									<h3 class="products__title">Baby Player Ladybird for education your baby</h3>
 									<dl class="products__param">
@@ -346,7 +346,7 @@
 						</div>
 						<div class="products__item">
 							<a href="#" class="products__inner">
-								<div class="products__img"><img src="img/img-products-05.jpg" alt="image description" /></div>
+								<div class="products__img"><div class="products__figure"><img src="img/img-products-05.jpg" alt="image description" /></div></div>
 								<div class="products__content">
 									<h3 class="products__title">Baby Player Ladybird</h3>
 									<dl class="products__param">
@@ -359,7 +359,7 @@
 						</div>
 						<div class="products__item">
 							<a href="#" class="products__inner">
-								<div class="products__img"><img src="img/img-products-06.jpg" alt="image description" /></div>
+								<div class="products__img"><div class="products__figure"><img src="img/img-products-06.jpg" alt="image description" /></div></div>
 								<div class="products__content">
 									<h3 class="products__title">Baby Player Ladybird</h3>
 									<dl class="products__param">
@@ -377,7 +377,7 @@
 					<div class="products__list">
 						<div class="products__item">
 							<a href="#" class="products__inner">
-								<div class="products__img"><img src="img/img-products-03.jpg" alt="image description" /></div>
+								<div class="products__img"><div class="products__figure"><img src="img/img-products-03.jpg" alt="image description" /></div></div>
 								<div class="products__content">
 									<h3 class="products__title">Baby Player Ladybird for education</h3>
 									<dl class="products__param">
@@ -390,7 +390,7 @@
 						</div>
 						<div class="products__item">
 							<a href="#" class="products__inner">
-								<div class="products__img"><img src="img/img-products-01.jpg" alt="image description" /></div>
+								<div class="products__img"><div class="products__figure"><img src="img/img-products-01.jpg" alt="image description" /></div></div>
 								<div class="products__content">
 									<h3 class="products__title">Baby Player Fire Kids Edition Tablet</h3>
 									<dl class="products__param">
@@ -403,7 +403,7 @@
 						</div>
 						<div class="products__item">
 							<a href="#" class="products__inner">
-								<div class="products__img"><img src="img/img-products-02.jpg" alt="image description" /></div>
+								<div class="products__img"><div class="products__figure"><img src="img/img-products-02.jpg" alt="image description" /></div></div>
 								<div class="products__content">
 									<h3 class="products__title">Baby Player Ladybird</h3>
 									<dl class="products__param">
@@ -416,7 +416,7 @@
 						</div>
 						<div class="products__item">
 							<a href="#" class="products__inner">
-								<div class="products__img"><img src="img/img-products-04.jpg" alt="image description" /></div>
+								<div class="products__img"><div class="products__figure"><img src="img/img-products-04.jpg" alt="image description" /></div></div>
 								<div class="products__content">
 									<h3 class="products__title">Baby Player Ladybird for education your baby</h3>
 									<dl class="products__param">
@@ -429,7 +429,7 @@
 						</div>
 						<div class="products__item">
 							<a href="#" class="products__inner">
-								<div class="products__img"><img src="img/img-products-05.jpg" alt="image description" /></div>
+								<div class="products__img"><div class="products__figure"><img src="img/img-products-05.jpg" alt="image description" /></div></div>
 								<div class="products__content">
 									<h3 class="products__title">Baby Player Ladybird</h3>
 									<dl class="products__param">
@@ -442,7 +442,7 @@
 						</div>
 						<div class="products__item">
 							<a href="#" class="products__inner">
-								<div class="products__img"><img src="img/img-products-06.jpg" alt="image description" /></div>
+								<div class="products__img"><div class="products__figure"><img src="img/img-products-06.jpg" alt="image description" /></div></div>
 								<div class="products__content">
 									<h3 class="products__title">Baby Player Ladybird</h3>
 									<dl class="products__param">
@@ -455,7 +455,7 @@
 						</div>
 						<div class="products__item">
 							<a href="#" class="products__inner">
-								<div class="products__img"><img src="img/img-products-01.jpg" alt="image description" /></div>
+								<div class="products__img"><div class="products__figure"><img src="img/img-products-01.jpg" alt="image description" /></div></div>
 								<div class="products__content">
 									<h3 class="products__title">Baby Player Fire Kids Edition Tablet</h3>
 									<dl class="products__param">
@@ -468,7 +468,7 @@
 						</div>
 						<div class="products__item">
 							<a href="#" class="products__inner">
-								<div class="products__img"><img src="img/img-products-02.jpg" alt="image description" /></div>
+								<div class="products__img"><div class="products__figure"><img src="img/img-products-02.jpg" alt="image description" /></div></div>
 								<div class="products__content">
 									<h3 class="products__title">Baby Player Ladybird</h3>
 									<dl class="products__param">
@@ -481,7 +481,7 @@
 						</div>
 						<div class="products__item">
 							<a href="#" class="products__inner">
-								<div class="products__img"><img src="img/img-products-03.jpg" alt="image description" /></div>
+								<div class="products__img"><div class="products__figure"><img src="img/img-products-03.jpg" alt="image description" /></div></div>
 								<div class="products__content">
 									<h3 class="products__title">Baby Player Ladybird for education</h3>
 									<dl class="products__param">
@@ -494,7 +494,7 @@
 						</div>
 						<div class="products__item">
 							<a href="#" class="products__inner">
-								<div class="products__img"><img src="img/img-products-04.jpg" alt="image description" /></div>
+								<div class="products__img"><div class="products__figure"><img src="img/img-products-04.jpg" alt="image description" /></div></div>
 								<div class="products__content">
 									<h3 class="products__title">Baby Player Ladybird for education your baby</h3>
 									<dl class="products__param">
@@ -507,7 +507,7 @@
 						</div>
 						<div class="products__item">
 							<a href="#" class="products__inner">
-								<div class="products__img"><img src="img/img-products-05.jpg" alt="image description" /></div>
+								<div class="products__img"><div class="products__figure"><img src="img/img-products-05.jpg" alt="image description" /></div></div>
 								<div class="products__content">
 									<h3 class="products__title">Baby Player Ladybird</h3>
 									<dl class="products__param">
@@ -520,7 +520,7 @@
 						</div>
 						<div class="products__item">
 							<a href="#" class="products__inner">
-								<div class="products__img"><img src="img/img-products-06.jpg" alt="image description" /></div>
+								<div class="products__img"><div class="products__figure"><img src="img/img-products-06.jpg" alt="image description" /></div></div>
 								<div class="products__content">
 									<h3 class="products__title">Baby Player Ladybird</h3>
 									<dl class="products__param">
@@ -538,7 +538,7 @@
 					<div class="products__list">
 						<div class="products__item">
 							<a href="#" class="products__inner">
-								<div class="products__img"><img src="img/img-products-02.jpg" alt="image description" /></div>
+								<div class="products__img"><div class="products__figure"><img src="img/img-products-02.jpg" alt="image description" /></div></div>
 								<div class="products__content">
 									<h3 class="products__title">Baby Player Ladybird</h3>
 									<dl class="products__param">
@@ -551,7 +551,7 @@
 						</div>
 						<div class="products__item">
 							<a href="#" class="products__inner">
-								<div class="products__img"><img src="img/img-products-01.jpg" alt="image description" /></div>
+								<div class="products__img"><div class="products__figure"><img src="img/img-products-01.jpg" alt="image description" /></div></div>
 								<div class="products__content">
 									<h3 class="products__title">Baby Player Fire Kids Edition Tablet</h3>
 									<dl class="products__param">
@@ -564,7 +564,7 @@
 						</div>
 						<div class="products__item">
 							<a href="#" class="products__inner">
-								<div class="products__img"><img src="img/img-products-03.jpg" alt="image description" /></div>
+								<div class="products__img"><div class="products__figure"><img src="img/img-products-03.jpg" alt="image description" /></div></div>
 								<div class="products__content">
 									<h3 class="products__title">Baby Player Ladybird for education</h3>
 									<dl class="products__param">
@@ -577,7 +577,7 @@
 						</div>
 						<div class="products__item">
 							<a href="#" class="products__inner">
-								<div class="products__img"><img src="img/img-products-04.jpg" alt="image description" /></div>
+								<div class="products__img"><div class="products__figure"><img src="img/img-products-04.jpg" alt="image description" /></div></div>
 								<div class="products__content">
 									<h3 class="products__title">Baby Player Ladybird for education your baby</h3>
 									<dl class="products__param">
@@ -590,7 +590,7 @@
 						</div>
 						<div class="products__item">
 							<a href="#" class="products__inner">
-								<div class="products__img"><img src="img/img-products-05.jpg" alt="image description" /></div>
+								<div class="products__img"><div class="products__figure"><img src="img/img-products-05.jpg" alt="image description" /></div></div>
 								<div class="products__content">
 									<h3 class="products__title">Baby Player Ladybird</h3>
 									<dl class="products__param">
@@ -603,7 +603,7 @@
 						</div>
 						<div class="products__item">
 							<a href="#" class="products__inner">
-								<div class="products__img"><img src="img/img-products-06.jpg" alt="image description" /></div>
+								<div class="products__img"><div class="products__figure"><img src="img/img-products-06.jpg" alt="image description" /></div></div>
 								<div class="products__content">
 									<h3 class="products__title">Baby Player Ladybird</h3>
 									<dl class="products__param">
@@ -616,7 +616,7 @@
 						</div>
 						<div class="products__item">
 							<a href="#" class="products__inner">
-								<div class="products__img"><img src="img/img-products-01.jpg" alt="image description" /></div>
+								<div class="products__img"><div class="products__figure"><img src="img/img-products-01.jpg" alt="image description" /></div></div>
 								<div class="products__content">
 									<h3 class="products__title">Baby Player Fire Kids Edition Tablet</h3>
 									<dl class="products__param">
@@ -629,7 +629,7 @@
 						</div>
 						<div class="products__item">
 							<a href="#" class="products__inner">
-								<div class="products__img"><img src="img/img-products-02.jpg" alt="image description" /></div>
+								<div class="products__img"><div class="products__figure"><img src="img/img-products-02.jpg" alt="image description" /></div></div>
 								<div class="products__content">
 									<h3 class="products__title">Baby Player Ladybird</h3>
 									<dl class="products__param">
@@ -642,7 +642,7 @@
 						</div>
 						<div class="products__item">
 							<a href="#" class="products__inner">
-								<div class="products__img"><img src="img/img-products-03.jpg" alt="image description" /></div>
+								<div class="products__img"><div class="products__figure"><img src="img/img-products-03.jpg" alt="image description" /></div></div>
 								<div class="products__content">
 									<h3 class="products__title">Baby Player Ladybird for education</h3>
 									<dl class="products__param">
@@ -655,7 +655,7 @@
 						</div>
 						<div class="products__item">
 							<a href="#" class="products__inner">
-								<div class="products__img"><img src="img/img-products-04.jpg" alt="image description" /></div>
+								<div class="products__img"><div class="products__figure"><img src="img/img-products-04.jpg" alt="image description" /></div></div>
 								<div class="products__content">
 									<h3 class="products__title">Baby Player Ladybird for education your baby</h3>
 									<dl class="products__param">
@@ -668,7 +668,7 @@
 						</div>
 						<div class="products__item">
 							<a href="#" class="products__inner">
-								<div class="products__img"><img src="img/img-products-05.jpg" alt="image description" /></div>
+								<div class="products__img"><div class="products__figure"><img src="img/img-products-05.jpg" alt="image description" /></div></div>
 								<div class="products__content">
 									<h3 class="products__title">Baby Player Ladybird</h3>
 									<dl class="products__param">
@@ -681,7 +681,7 @@
 						</div>
 						<div class="products__item">
 							<a href="#" class="products__inner">
-								<div class="products__img"><img src="img/img-products-06.jpg" alt="image description" /></div>
+								<div class="products__img"><div class="products__figure"><img src="img/img-products-06.jpg" alt="image description" /></div></div>
 								<div class="products__content">
 									<h3 class="products__title">Baby Player Ladybird</h3>
 									<dl class="products__param">
