--- a/products.html
+++ b/products.html
@@ -293,7 +293,7 @@
 			<div class="products__list products filters-container-js">
 				<div class="products__item tag-younger tag-educational tag-music tag-set tag-puzzle">
 					<a href="#" class="products__inner popup-opener-js">
-						<div class="products__img"><img src="img/img-products-01.jpg" alt="image description" /></div>
+						<div class="products__img"><div class="products__figure"><img src="img/img-products-01.jpg" alt="image description" /></div></div>
 						<div class="products__content">
 							<h3 class="products__title">Baby Player Fire Kids Edition Tablet</h3>
 							<dl class="products__param">
@@ -306,7 +306,7 @@
 				</div>
 				<div class="products__item tag-middle tag-new tag-educational tag-music tag-music tag-art">
 					<a href="#" class="products__inner popup-opener-js">
-						<div class="products__img"><img src="img/img-products-02.jpg" alt="image description" /></div>
+						<div class="products__img"><div class="products__figure"><img src="img/img-products-02.jpg" alt="image description" /></div></div>
 						<div class="products__content">
 							<h3 class="products__title">Baby Player Ladybird</h3>
 							<dl class="products__param">
@@ -319,7 +319,7 @@
 				</div>
 				<div class="products__item tag-younger tag-new tag-music tag-educational-card">
 					<a href="#" class="products__inner popup-opener-js">
-						<div class="products__img"><img src="img/img-products-03.jpg" alt="image description" /></div>
+						<div class="products__img"><div class="products__figure"><img src="img/img-products-03.jpg" alt="image description" /></div></div>
 						<div class="products__content">
 							<h3 class="products__title">Baby Player Ladybird for education</h3>
 							<dl class="products__param">
@@ -332,7 +332,7 @@
 				</div>
 				<div class="products__item tag-senior tag-popular tag-educational tag-art tag-educational-card">
 					<a href="#" class="products__inner popup-opener-js">
-						<div class="products__img"><img src="img/img-products-04.jpg" alt="image description" /></div>
+						<div class="products__img"><div class="products__figure"><img src="img/img-products-04.jpg" alt="image description" /></div></div>
 						<div class="products__content">
 							<h3 class="products__title">Baby Player Ladybird for education your baby</h3>
 							<dl class="products__param">
@@ -345,7 +345,7 @@
 				</div>
 				<div class="products__item tag-middle tag-popular tag-tablet tag-sticker">
 					<a href="#" class="products__inner popup-opener-js">
-						<div class="products__img"><img src="img/img-products-05.jpg" alt="image description" /></div>
+						<div class="products__img"><div class="products__figure"><img src="img/img-products-05.jpg" alt="image description" /></div></div>
 						<div class="products__content">
 							<h3 class="products__title">Baby Player Ladybird</h3>
 							<dl class="products__param">
@@ -358,7 +358,7 @@
 				</div>
 				<div class="products__item tag-senior tag-new tag-educational tag-music tag-smartphone tag-sticker">
 					<a href="#" class="products__inner popup-opener-js">
-						<div class="products__img"><img src="img/img-products-06.jpg" alt="image description" /></div>
+						<div class="products__img"><div class="products__figure"><img src="img/img-products-06.jpg" alt="image description" /></div></div>
 						<div class="products__content">
 							<h3 class="products__title">Baby Player Ladybird</h3>
 							<dl class="products__param">
@@ -371,7 +371,7 @@
 				</div>
 				<div class="products__item tag-middle tag-exclusive tag-educational tag-tablet tag-touch">
 					<a href="#" class="products__inner popup-opener-js">
-						<div class="products__img"><img src="img/img-products-01.jpg" alt="image description" /></div>
+						<div class="products__img"><div class="products__figure"><img src="img/img-products-01.jpg" alt="image description" /></div></div>
 						<div class="products__content">
 							<h3 class="products__title">Baby Player Fire Kids Edition Tablet</h3>
 							<dl class="products__param">
@@ -384,7 +384,7 @@
 				</div>
 				<div class="products__item tag-senior tag-exclusive tag-educational tag-smartphone">
 					<a href="#" class="products__inner popup-opener-js">
-						<div class="products__img"><img src="img/img-products-02.jpg" alt="image description" /></div>
+						<div class="products__img"><div class="products__figure"><img src="img/img-products-02.jpg" alt="image description" /></div></div>
 						<div class="products__content">
 							<h3 class="products__title">Baby Player Ladybird</h3>
 							<dl class="products__param">
@@ -397,7 +397,7 @@
 				</div>
 				<div class="products__item tag-middle tag-exclusive tag-smartphone tag-sticker">
 					<a href="#" class="products__inner popup-opener-js">
-						<div class="products__img"><img src="img/img-products-03.jpg" alt="image description" /></div>
+						<div class="products__img"><div class="products__figure"><img src="img/img-products-03.jpg" alt="image description" /></div></div>
 						<div class="products__content">
 							<h3 class="products__title">Baby Player Ladybird for education</h3>
 							<dl class="products__param">
@@ -410,7 +410,7 @@
 				</div>
 				<div class="products__item tag-senior tag-smart-watch tag-microphone">
 					<a href="#" class="products__inner popup-opener-js">
-						<div class="products__img"><img src="img/img-products-04.jpg" alt="image description" /></div>
+						<div class="products__img"><div class="products__figure"><img src="img/img-products-04.jpg" alt="image description" /></div></div>
 						<div class="products__content">
 							<h3 class="products__title">Baby Player Ladybird for education your baby</h3>
 							<dl class="products__param">
@@ -423,7 +423,7 @@
 				</div>
 				<div class="products__item tag-middle tag-microphone tag-educational-card">
 					<a href="#" class="products__inner popup-opener-js">
-						<div class="products__img"><img src="img/img-products-05.jpg" alt="image description" /></div>
+						<div class="products__img"><div class="products__figure"><img src="img/img-products-05.jpg" alt="image description" /></div></div>
 						<div class="products__content">
 							<h3 class="products__title">Baby Player Ladybird</h3>
 							<dl class="products__param">
@@ -436,7 +436,7 @@
 				</div>
 				<div class="products__item tag-senior tag-exclusive tag-educational tag-smart-watch">
 					<a href="#" class="products__inner popup-opener-js">
-						<div class="products__img"><img src="img/img-products-06.jpg" alt="image description" /></div>
+						<div class="products__img"><div class="products__figure"><img src="img/img-products-06.jpg" alt="image description" /></div></div>
 						<div class="products__content">
 							<h3 class="products__title">Baby Player Ladybird</h3>
 							<dl class="products__param">
@@ -449,7 +449,7 @@
 				</div>
 				<div class="products__item tag-younger tag-educational tag-smart-watch tag-set">
 					<a href="#" class="products__inner popup-opener-js">
-						<div class="products__img"><img src="img/img-products-01.jpg" alt="image description" /></div>
+						<div class="products__img"><div class="products__figure"><img src="img/img-products-01.jpg" alt="image description" /></div></div>
 						<div class="products__content">
 							<h3 class="products__title">Baby Player Fire Kids Edition Tablet</h3>
 							<dl class="products__param">
@@ -462,7 +462,7 @@
 				</div>
 				<div class="products__item tag-middle tag-new tag-educational tag-art tag-console tag-puzzle">
 					<a href="#" class="products__inner popup-opener-js">
-						<div class="products__img"><img src="img/img-products-02.jpg" alt="image description" /></div>
+						<div class="products__img"><div class="products__figure"><img src="img/img-products-02.jpg" alt="image description" /></div></div>
 						<div class="products__content">
 							<h3 class="products__title">Baby Player Ladybird</h3>
 							<dl class="products__param">
@@ -475,7 +475,7 @@
 				</div>
 				<div class="products__item tag-younger tag-new tag-educational tag-console tag-sound-mat">
 					<a href="#" class="products__inner popup-opener-js">
-						<div class="products__img"><img src="img/img-products-03.jpg" alt="image description" /></div>
+						<div class="products__img"><div class="products__figure"><img src="img/img-products-03.jpg" alt="image description" /></div></div>
 						<div class="products__content">
 							<h3 class="products__title">Baby Player Ladybird for education</h3>
 							<dl class="products__param">
@@ -488,7 +488,7 @@
 				</div>
 				<div class="products__item tag-senior tag-popular tag-sound-mat tag-sticker">
 					<a href="#" class="products__inner popup-opener-js">
-						<div class="products__img"><img src="img/img-products-04.jpg" alt="image description" /></div>
+						<div class="products__img"><div class="products__figure"><img src="img/img-products-04.jpg" alt="image description" /></div></div>
 						<div class="products__content">
 							<h3 class="products__title">Baby Player Ladybird for education your baby</h3>
 							<dl class="products__param">
@@ -501,7 +501,7 @@
 				</div>
 				<div class="products__item tag-middle tag-popular tag-educational tag-sound-mat tag-puzzle">
 					<a href="#" class="products__inner popup-opener-js">
-						<div class="products__img"><img src="img/img-products-05.jpg" alt="image description" /></div>
+						<div class="products__img"><div class="products__figure"><img src="img/img-products-05.jpg" alt="image description" /></div></div>
 						<div class="products__content">
 							<h3 class="products__title">Baby Player Ladybird</h3>
 							<dl class="products__param">
@@ -514,7 +514,7 @@
 				</div>
 				<div class="products__item tag-senior tag-new tag-educational tag-music tag-console">
 					<a href="#" class="products__inner popup-opener-js">
-						<div class="products__img"><img src="img/img-products-06.jpg" alt="image description" /></div>
+						<div class="products__img"><div class="products__figure"><img src="img/img-products-06.jpg" alt="image description" /></div></div>
 						<div class="products__content">
 							<h3 class="products__title">Baby Player Ladybird</h3>
 							<dl class="products__param">
@@ -532,7 +532,7 @@
 						<div class="tape-slider__holder">
 							<div class="products__item">
 								<a href="#" class="products__inner">
-									<div class="products__img"><img src="img/img-products-01.jpg" alt="image description" /></div>
+									<div class="products__img"><div class="products__figure"><img src="img/img-products-01.jpg" alt="image description" /></div></div>
 									<div class="products__content">
 										<h3 class="products__title">Baby Player Fire Kids Edition Tablet</h3>
 										<dl class="products__param">
@@ -545,7 +545,7 @@
 							</div>
 							<div class="products__item">
 								<a href="#" class="products__inner">
-									<div class="products__img"><img src="img/img-products-02.jpg" alt="image description" /></div>
+									<div class="products__img"><div class="products__figure"><img src="img/img-video-01.jpg" alt="image description" /></div></div>
 									<div class="products__content">
 										<h3 class="products__title">Baby Player Ladybird</h3>
 										<dl class="products__param">
@@ -558,7 +558,7 @@
 							</div>
 							<div class="products__item">
 								<a href="#" class="products__inner">
-									<div class="products__img"><img src="img/img-products-03.jpg" alt="image description" /></div>
+									<div class="products__img"><div class="products__figure"><img src="img/img-expl-lg.jpg" alt="image description" /></div></div>
 									<div class="products__content">
 										<h3 class="products__title">Baby Player Ladybird for education</h3>
 										<dl class="products__param">
@@ -571,7 +571,7 @@
 							</div>
 							<div class="products__item">
 								<a href="#" class="products__inner">
-									<div class="products__img"><img src="img/img-products-04.jpg" alt="image description" /></div>
+									<div class="products__img"><div class="products__figure"><img src="img/img-previews-04-test.jpg" alt="image description" /></div></div>
 									<div class="products__content">
 										<h3 class="products__title">Baby Player Ladybird for education your baby</h3>
 										<dl class="products__param">
@@ -584,7 +584,7 @@
 							</div>
 							<div class="products__item">
 								<a href="#" class="products__inner">
-									<div class="products__img"><img src="img/img-products-05.jpg" alt="image description" /></div>
+									<div class="products__img"><div class="products__figure"><img src="img/img-expl-sm.jpg" alt="image description" /></div></div>
 									<div class="products__content">
 										<h3 class="products__title">Baby Player Ladybird</h3>
 										<dl class="products__param">
@@ -597,7 +597,7 @@
 							</div>
 							<div class="products__item">
 								<a href="#" class="products__inner">
-									<div class="products__img"><img src="img/img-products-06.jpg" alt="image description" /></div>
+									<div class="products__img"><div class="products__figure"><img src="img/img-news-01.jpg" alt="image description" /></div></div>
 									<div class="products__content">
 										<h3 class="products__title">Baby Player Ladybird</h3>
 										<dl class="products__param">
@@ -610,7 +610,7 @@
 							</div>
 							<div class="products__item">
 								<a href="#" class="products__inner">
-									<div class="products__img"><img src="img/img-products-01.jpg" alt="image description" /></div>
+									<div class="products__img"><div class="products__figure"><img src="img/img-products-01.jpg" alt="image description" /></div></div>
 									<div class="products__content">
 										<h3 class="products__title">Baby Player Fire Kids Edition Tablet</h3>
 										<dl class="products__param">
@@ -623,7 +623,7 @@
 							</div>
 							<div class="products__item">
 								<a href="#" class="products__inner">
-									<div class="products__img"><img src="img/img-products-02.jpg" alt="image description" /></div>
+									<div class="products__img"><div class="products__figure"><img src="img/img-products-02.jpg" alt="image description" /></div></div>
 									<div class="products__content">
 										<h3 class="products__title">Baby Player Ladybird</h3>
 										<dl class="products__param">
@@ -636,7 +636,7 @@
 							</div>
 							<div class="products__item">
 								<a href="#" class="products__inner">
-									<div class="products__img"><img src="img/img-products-03.jpg" alt="image description" /></div>
+									<div class="products__img"><div class="products__figure"><img src="img/img-products-03.jpg" alt="image description" /></div></div>
 									<div class="products__content">
 										<h3 class="products__title">Baby Player Ladybird for education</h3>
 										<dl class="products__param">
@@ -649,7 +649,7 @@
 							</div>
 							<div class="products__item">
 								<a href="#" class="products__inner">
-									<div class="products__img"><img src="img/img-products-04.jpg" alt="image description" /></div>
+									<div class="products__img"><div class="products__figure"><img src="img/img-products-04.jpg" alt="image description" /></div></div>
 									<div class="products__content">
 										<h3 class="products__title">Baby Player Ladybird for education your baby</h3>
 										<dl class="products__param">
@@ -662,7 +662,7 @@
 							</div>
 							<div class="products__item">
 								<a href="#" class="products__inner">
-									<div class="products__img"><img src="img/img-products-05.jpg" alt="image description" /></div>
+									<div class="products__img"><div class="products__figure"><img src="img/img-products-05.jpg" alt="image description" /></div></div>
 									<div class="products__content">
 										<h3 class="products__title">Baby Player Ladybird</h3>
 										<dl class="products__param">
@@ -675,7 +675,7 @@
 							</div>
 							<div class="products__item">
 								<a href="#" class="products__inner">
-									<div class="products__img"><img src="img/img-products-06.jpg" alt="image description" /></div>
+									<div class="products__img"><div class="products__figure"><img src="img/img-products-06.jpg" alt="image description" /></div></div>
 									<div class="products__content">
 										<h3 class="products__title">Baby Player Ladybird</h3>
 										<dl class="products__param">
@@ -688,7 +688,7 @@
 							</div>
 							<div class="products__item">
 								<a href="#" class="products__inner">
-									<div class="products__img"><img src="img/img-products-01.jpg" alt="image description" /></div>
+									<div class="products__img"><div class="products__figure"><img src="img/img-products-01.jpg" alt="image description" /></div></div>
 									<div class="products__content">
 										<h3 class="products__title">Baby Player Fire Kids Edition Tablet</h3>
 										<dl class="products__param">
@@ -701,7 +701,7 @@
 							</div>
 							<div class="products__item">
 								<a href="#" class="products__inner">
-									<div class="products__img"><img src="img/img-products-02.jpg" alt="image description" /></div>
+									<div class="products__img"><div class="products__figure"><img src="img/img-products-02.jpg" alt="image description" /></div></div>
 									<div class="products__content">
 										<h3 class="products__title">Baby Player Ladybird</h3>
 										<dl class="products__param">
@@ -714,7 +714,7 @@
 							</div>
 							<div class="products__item">
 								<a href="#" class="products__inner">
-									<div class="products__img"><img src="img/img-products-03.jpg" alt="image description" /></div>
+									<div class="products__img"><div class="products__figure"><img src="img/img-products-03.jpg" alt="image description" /></div></div>
 									<div class="products__content">
 										<h3 class="products__title">Baby Player Ladybird for education</h3>
 										<dl class="products__param">
@@ -727,7 +727,7 @@
 							</div>
 							<div class="products__item">
 								<a href="#" class="products__inner">
-									<div class="products__img"><img src="img/img-products-04.jpg" alt="image description" /></div>
+									<div class="products__img"><div class="products__figure"><img src="img/img-products-04.jpg" alt="image description" /></div></div>
 									<div class="products__content">
 										<h3 class="products__title">Baby Player Ladybird for education your baby</h3>
 										<dl class="products__param">
@@ -740,7 +740,7 @@
 							</div>
 							<div class="products__item">
 								<a href="#" class="products__inner">
-									<div class="products__img"><img src="img/img-products-05.jpg" alt="image description" /></div>
+									<div class="products__img"><div class="products__figure"><img src="img/img-products-05.jpg" alt="image description" /></div></div>
 									<div class="products__content">
 										<h3 class="products__title">Baby Player Ladybird</h3>
 										<dl class="products__param">
@@ -753,7 +753,7 @@
 							</div>
 							<div class="products__item">
 								<a href="#" class="products__inner">
-									<div class="products__img"><img src="img/img-products-06.jpg" alt="image description" /></div>
+									<div class="products__img"><div class="products__figure"><img src="img/img-products-06.jpg" alt="image description" /></div></div>
 									<div class="products__content">
 										<h3 class="products__title">Baby Player Ladybird</h3>
 										<dl class="products__param">
