--- a/products.html
+++ b/products.html
@@ -30,7 +30,7 @@
 	<div class="prl-cont">
 		<div class="prl-icon"></div>
 		<div class="prl-logo">
-			<span class="prl-text">Loading...</span>
+			<div class="prl-text">Loading <span class="prl-dot">.</span><span class="prl-dot">.</span><span class="prl-dot">.</span></div>
 		</div>
 	</div>
 </div>
@@ -526,255 +526,6 @@
 					</a>
 				</div>
 			</div>
-			<div class="similar-products">
-				<div class="tape-slider">
-					<div class="tape-slider__frame">
-						<div class="tape-slider__holder">
-							<div class="products__item">
-								<a href="#" class="products__inner">
-									<div class="products__img"><div class="products__figure"><img src="img/img-products-01.jpg" alt="image description" /></div></div>
-									<div class="products__content">
-										<h3 class="products__title">Baby Player Fire Kids Edition Tablet</h3>
-										<dl class="products__param">
-											<dt>Category:</dt> <dd>Educational Toys, Sound and Music Toys, Tablets with Touch Screen Pages</dd>
-											<dt>Skills:</dt> <dd>Cognitive skills, Hand-eye coordination, Sensory abilities, Reading skills</dd>
-											<dt>Age:</dt> <dd>2-3, 4-5, 6+</dd>
-										</dl>
-									</div>
-								</a>
-							</div>
-							<div class="products__item">
-								<a href="#" class="products__inner">
-									<div class="products__img"><div class="products__figure"><img src="img/img-video-01.jpg" alt="image description" /></div></div>
-									<div class="products__content">
-										<h3 class="products__title">Baby Player Ladybird</h3>
-										<dl class="products__param">
-											<dt>Category:</dt> <dd>Learn</dd>
-											<dt>Skills:</dt> <dd>Memory</dd>
-											<dt>Age:</dt> <dd>5-7 years</dd>
-										</dl>
-									</div>
-								</a>
-							</div>
-							<div class="products__item">
-								<a href="#" class="products__inner">
-									<div class="products__img"><div class="products__figure"><img src="img/img-expl-lg.jpg" alt="image description" /></div></div>
-									<div class="products__content">
-										<h3 class="products__title">Baby Player Ladybird for education</h3>
-										<dl class="products__param">
-											<dt>Category:</dt> <dd>Microphones, Sound Mats, Sound Construction Models and Sets, Educational Cards, Puzzle Elements, Sticker Elements</dd>
-											<dt>Skills:</dt> <dd>Logical thinking skills, Social skills, Reading skills</dd>
-											<dt>Age:</dt> <dd>2-3, 4-5</dd>
-										</dl>
-									</div>
-								</a>
-							</div>
-							<div class="products__item">
-								<a href="#" class="products__inner">
-									<div class="products__img"><div class="products__figure"><img src="img/img-previews-04-test.jpg" alt="image description" /></div></div>
-									<div class="products__content">
-										<h3 class="products__title">Baby Player Ladybird for education your baby</h3>
-										<dl class="products__param">
-											<dt>Category:</dt> <dd>Learn</dd>
-											<dt>Skills:</dt> <dd>Memory</dd>
-											<dt>Age:</dt> <dd>5-7 years</dd>
-										</dl>
-									</div>
-								</a>
-							</div>
-							<div class="products__item">
-								<a href="#" class="products__inner">
-									<div class="products__img"><div class="products__figure"><img src="img/img-expl-sm.jpg" alt="image description" /></div></div>
-									<div class="products__content">
-										<h3 class="products__title">Baby Player Ladybird</h3>
-										<dl class="products__param">
-											<dt>Category:</dt> <dd>Learn</dd>
-											<dt>Skills:</dt> <dd>Memory</dd>
-											<dt>Age:</dt> <dd>5-7 years</dd>
-										</dl>
-									</div>
-								</a>
-							</div>
-							<div class="products__item">
-								<a href="#" class="products__inner">
-									<div class="products__img"><div class="products__figure"><img src="img/img-news-01.jpg" alt="image description" /></div></div>
-									<div class="products__content">
-										<h3 class="products__title">Baby Player Ladybird</h3>
-										<dl class="products__param">
-											<dt>Category:</dt> <dd>Microphones, Sound Mats, Sound Construction Models and Sets, Educational Cards, Puzzle Elements, Sticker Elements</dd>
-											<dt>Skills:</dt> <dd>Logical thinking skills, Social skills, Reading skills</dd>
-											<dt>Age:</dt> <dd>2-3, 4-5</dd>
-										</dl>
-									</div>
-								</a>
-							</div>
-							<div class="products__item">
-								<a href="#" class="products__inner">
-									<div class="products__img"><div class="products__figure"><img src="img/img-products-01.jpg" alt="image description" /></div></div>
-									<div class="products__content">
-										<h3 class="products__title">Baby Player Fire Kids Edition Tablet</h3>
-										<dl class="products__param">
-											<dt>Category:</dt> <dd>Microphones, Sound Mats, Sound Construction Models and Sets, Educational Cards, Puzzle Elements, Sticker Elements</dd>
-											<dt>Skills:</dt> <dd>Logical thinking skills, Social skills, Reading skills</dd>
-											<dt>Age:</dt> <dd>2-3, 4-5</dd>
-										</dl>
-									</div>
-								</a>
-							</div>
-							<div class="products__item">
-								<a href="#" class="products__inner">
-									<div class="products__img"><div class="products__figure"><img src="img/img-products-02.jpg" alt="image description" /></div></div>
-									<div class="products__content">
-										<h3 class="products__title">Baby Player Ladybird</h3>
-										<dl class="products__param">
-											<dt>Category:</dt> <dd>Learn</dd>
-											<dt>Skills:</dt> <dd>Memory</dd>
-											<dt>Age:</dt> <dd>5-7 years</dd>
-										</dl>
-									</div>
-								</a>
-							</div>
-							<div class="products__item">
-								<a href="#" class="products__inner">
-									<div class="products__img"><div class="products__figure"><img src="img/img-products-03.jpg" alt="image description" /></div></div>
-									<div class="products__content">
-										<h3 class="products__title">Baby Player Ladybird for education</h3>
-										<dl class="products__param">
-											<dt>Category:</dt> <dd>Microphones, Sound Mats, Sound Construction Models and Sets, Educational Cards, Puzzle Elements, Sticker Elements</dd>
-											<dt>Skills:</dt> <dd>Logical thinking skills, Social skills, Reading skills</dd>
-											<dt>Age:</dt> <dd>2-3, 4-5</dd>
-										</dl>
-									</div>
-								</a>
-							</div>
-							<div class="products__item">
-								<a href="#" class="products__inner">
-									<div class="products__img"><div class="products__figure"><img src="img/img-products-04.jpg" alt="image description" /></div></div>
-									<div class="products__content">
-										<h3 class="products__title">Baby Player Ladybird for education your baby</h3>
-										<dl class="products__param">
-											<dt>Category:</dt> <dd>Learn</dd>
-											<dt>Skills:</dt> <dd>Memory</dd>
-											<dt>Age:</dt> <dd>5-7 years</dd>
-										</dl>
-									</div>
-								</a>
-							</div>
-							<div class="products__item">
-								<a href="#" class="products__inner">
-									<div class="products__img"><div class="products__figure"><img src="img/img-products-05.jpg" alt="image description" /></div></div>
-									<div class="products__content">
-										<h3 class="products__title">Baby Player Ladybird</h3>
-										<dl class="products__param">
-											<dt>Category:</dt> <dd>Microphones, Sound Mats, Sound Construction Models and Sets, Educational Cards, Puzzle Elements, Sticker Elements</dd>
-											<dt>Skills:</dt> <dd>Logical thinking skills, Social skills, Reading skills</dd>
-											<dt>Age:</dt> <dd>2-3, 4-5</dd>
-										</dl>
-									</div>
-								</a>
-							</div>
-							<div class="products__item">
-								<a href="#" class="products__inner">
-									<div class="products__img"><div class="products__figure"><img src="img/img-products-06.jpg" alt="image description" /></div></div>
-									<div class="products__content">
-										<h3 class="products__title">Baby Player Ladybird</h3>
-										<dl class="products__param">
-											<dt>Category:</dt> <dd>Learn</dd>
-											<dt>Skills:</dt> <dd>Memory</dd>
-											<dt>Age:</dt> <dd>5-7 years</dd>
-										</dl>
-									</div>
-								</a>
-							</div>
-							<div class="products__item">
-								<a href="#" class="products__inner">
-									<div class="products__img"><div class="products__figure"><img src="img/img-products-01.jpg" alt="image description" /></div></div>
-									<div class="products__content">
-										<h3 class="products__title">Baby Player Fire Kids Edition Tablet</h3>
-										<dl class="products__param">
-											<dt>Category:</dt> <dd>Microphones, Sound Mats, Sound Construction Models and Sets, Educational Cards, Puzzle Elements, Sticker Elements</dd>
-											<dt>Skills:</dt> <dd>Logical thinking skills, Social skills, Reading skills</dd>
-											<dt>Age:</dt> <dd>2-3, 4-5</dd>
-										</dl>
-									</div>
-								</a>
-							</div>
-							<div class="products__item">
-								<a href="#" class="products__inner">
-									<div class="products__img"><div class="products__figure"><img src="img/img-products-02.jpg" alt="image description" /></div></div>
-									<div class="products__content">
-										<h3 class="products__title">Baby Player Ladybird</h3>
-										<dl class="products__param">
-											<dt>Category:</dt> <dd>Learn</dd>
-											<dt>Skills:</dt> <dd>Memory</dd>
-											<dt>Age:</dt> <dd>5-7 years</dd>
-										</dl>
-									</div>
-								</a>
-							</div>
-							<div class="products__item">
-								<a href="#" class="products__inner">
-									<div class="products__img"><div class="products__figure"><img src="img/img-products-03.jpg" alt="image description" /></div></div>
-									<div class="products__content">
-										<h3 class="products__title">Baby Player Ladybird for education</h3>
-										<dl class="products__param">
-											<dt>Category:</dt> <dd>Learn</dd>
-											<dt>Skills:</dt> <dd>Memory</dd>
-											<dt>Age:</dt> <dd>5-7 years</dd>
-										</dl>
-									</div>
-								</a>
-							</div>
-							<div class="products__item">
-								<a href="#" class="products__inner">
-									<div class="products__img"><div class="products__figure"><img src="img/img-products-04.jpg" alt="image description" /></div></div>
-									<div class="products__content">
-										<h3 class="products__title">Baby Player Ladybird for education your baby</h3>
-										<dl class="products__param">
-											<dt>Category:</dt> <dd>Microphones, Sound Mats, Sound Construction Models and Sets, Educational Cards, Puzzle Elements, Sticker Elements</dd>
-											<dt>Skills:</dt> <dd>Logical thinking skills, Social skills, Reading skills</dd>
-											<dt>Age:</dt> <dd>2-3, 4-5</dd>
-										</dl>
-									</div>
-								</a>
-							</div>
-							<div class="products__item">
-								<a href="#" class="products__inner">
-									<div class="products__img"><div class="products__figure"><img src="img/img-products-05.jpg" alt="image description" /></div></div>
-									<div class="products__content">
-										<h3 class="products__title">Baby Player Ladybird</h3>
-										<dl class="products__param">
-											<dt>Category:</dt> <dd>Learn</dd>
-											<dt>Skills:</dt> <dd>Memory</dd>
-											<dt>Age:</dt> <dd>5-7 years</dd>
-										</dl>
-									</div>
-								</a>
-							</div>
-							<div class="products__item">
-								<a href="#" class="products__inner">
-									<div class="products__img"><div class="products__figure"><img src="img/img-products-06.jpg" alt="image description" /></div></div>
-									<div class="products__content">
-										<h3 class="products__title">Baby Player Ladybird</h3>
-										<dl class="products__param">
-											<dt>Category:</dt> <dd>Microphones, Sound Mats, Sound Construction Models and Sets, Educational Cards, Puzzle Elements, Sticker Elements</dd>
-											<dt>Skills:</dt> <dd>Logical thinking skills, Social skills, Reading skills</dd>
-											<dt>Age:</dt> <dd>2-3, 4-5</dd>
-										</dl>
-									</div>
-								</a>
-							</div>
-						</div>
-					</div>
-					<div class="tape-slider__arr tape-slider__prev"></div>
-					<div class="tape-slider__arr tape-slider__next"></div>
-					<div class="tape-slider__scrollbar">
-						<div class="tape-slider__handle">
-							<div class="tape-slider__mousearea"></div>
-						</div>
-					</div>
-				</div>
-			</div>
 		</div>
 		<!--CONTENT end-->
 	</div>
@@ -940,7 +691,140 @@
 					<h2>Similar products</h2>
 				</div>
 			</div>
-
+			<!--similar products-->
+			<div class="similar-products">
+				<div class="tape-slider">
+					<div class="tape-slider__frame">
+						<div class="tape-slider__holder">
+							<div class="products__item">
+								<a href="#" class="products__inner">
+									<div class="products__img"><div class="products__figure"><img src="img/img-products-01.jpg" alt="image description" /></div></div>
+									<div class="products__content">
+										<h3 class="products__title">Baby Player Fire Kids Edition Tablet</h3>
+										<dl class="products__param">
+											<dt>Category:</dt> <dd>Educational Toys, Sound and Music Toys, Tablets with Touch Screen Pages</dd>
+											<dt>Skills:</dt> <dd>Cognitive skills, Hand-eye coordination, Sensory abilities, Reading skills</dd>
+											<dt>Age:</dt> <dd>2-3, 4-5, 6+</dd>
+										</dl>
+									</div>
+								</a>
+							</div>
+							<div class="products__item">
+								<a href="#" class="products__inner">
+									<div class="products__img"><div class="products__figure"><img src="img/img-video-01.jpg" alt="image description" /></div></div>
+									<div class="products__content">
+										<h3 class="products__title">Baby Player Ladybird</h3>
+										<dl class="products__param">
+											<dt>Category:</dt> <dd>Learn</dd>
+											<dt>Skills:</dt> <dd>Memory</dd>
+											<dt>Age:</dt> <dd>5-7 years</dd>
+										</dl>
+									</div>
+								</a>
+							</div>
+							<div class="products__item">
+								<a href="#" class="products__inner">
+									<div class="products__img"><div class="products__figure"><img src="img/img-expl-lg.jpg" alt="image description" /></div></div>
+									<div class="products__content">
+										<h3 class="products__title">Baby Player Ladybird for education</h3>
+										<dl class="products__param">
+											<dt>Category:</dt> <dd>Microphones, Sound Mats, Sound Construction Models and Sets, Educational Cards, Puzzle Elements, Sticker Elements</dd>
+											<dt>Skills:</dt> <dd>Logical thinking skills, Social skills, Reading skills</dd>
+											<dt>Age:</dt> <dd>2-3, 4-5</dd>
+										</dl>
+									</div>
+								</a>
+							</div>
+							<div class="products__item">
+								<a href="#" class="products__inner">
+									<div class="products__img"><div class="products__figure"><img src="img/img-previews-04-test.jpg" alt="image description" /></div></div>
+									<div class="products__content">
+										<h3 class="products__title">Baby Player Ladybird for education your baby</h3>
+										<dl class="products__param">
+											<dt>Category:</dt> <dd>Learn</dd>
+											<dt>Skills:</dt> <dd>Memory</dd>
+											<dt>Age:</dt> <dd>5-7 years</dd>
+										</dl>
+									</div>
+								</a>
+							</div>
+							<div class="products__item">
+								<a href="#" class="products__inner">
+									<div class="products__img"><div class="products__figure"><img src="img/img-expl-sm.jpg" alt="image description" /></div></div>
+									<div class="products__content">
+										<h3 class="products__title">Baby Player Ladybird</h3>
+										<dl class="products__param">
+											<dt>Category:</dt> <dd>Learn</dd>
+											<dt>Skills:</dt> <dd>Memory</dd>
+											<dt>Age:</dt> <dd>5-7 years</dd>
+										</dl>
+									</div>
+								</a>
+							</div>
+							<div class="products__item">
+								<a href="#" class="products__inner">
+									<div class="products__img"><div class="products__figure"><img src="img/img-news-01.jpg" alt="image description" /></div></div>
+									<div class="products__content">
+										<h3 class="products__title">Baby Player Ladybird</h3>
+										<dl class="products__param">
+											<dt>Category:</dt> <dd>Microphones, Sound Mats, Sound Construction Models and Sets, Educational Cards, Puzzle Elements, Sticker Elements</dd>
+											<dt>Skills:</dt> <dd>Logical thinking skills, Social skills, Reading skills</dd>
+											<dt>Age:</dt> <dd>2-3, 4-5</dd>
+										</dl>
+									</div>
+								</a>
+							</div>
+							<div class="products__item">
+								<a href="#" class="products__inner">
+									<div class="products__img"><div class="products__figure"><img src="img/img-products-01.jpg" alt="image description" /></div></div>
+									<div class="products__content">
+										<h3 class="products__title">Baby Player Fire Kids Edition Tablet</h3>
+										<dl class="products__param">
+											<dt>Category:</dt> <dd>Microphones, Sound Mats, Sound Construction Models and Sets, Educational Cards, Puzzle Elements, Sticker Elements</dd>
+											<dt>Skills:</dt> <dd>Logical thinking skills, Social skills, Reading skills</dd>
+											<dt>Age:</dt> <dd>2-3, 4-5</dd>
+										</dl>
+									</div>
+								</a>
+							</div>
+							<div class="products__item">
+								<a href="#" class="products__inner">
+									<div class="products__img"><div class="products__figure"><img src="img/img-products-02.jpg" alt="image description" /></div></div>
+									<div class="products__content">
+										<h3 class="products__title">Baby Player Ladybird</h3>
+										<dl class="products__param">
+											<dt>Category:</dt> <dd>Learn</dd>
+											<dt>Skills:</dt> <dd>Memory</dd>
+											<dt>Age:</dt> <dd>5-7 years</dd>
+										</dl>
+									</div>
+								</a>
+							</div>
+							<div class="products__item">
+								<a href="#" class="products__inner">
+									<div class="products__img"><div class="products__figure"><img src="img/img-products-03.jpg" alt="image description" /></div></div>
+									<div class="products__content">
+										<h3 class="products__title">Baby Player Ladybird for education</h3>
+										<dl class="products__param">
+											<dt>Category:</dt> <dd>Microphones, Sound Mats, Sound Construction Models and Sets, Educational Cards, Puzzle Elements, Sticker Elements</dd>
+											<dt>Skills:</dt> <dd>Logical thinking skills, Social skills, Reading skills</dd>
+											<dt>Age:</dt> <dd>2-3, 4-5</dd>
+										</dl>
+									</div>
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="tape-slider__arr tape-slider__prev"></div>
+					<div class="tape-slider__arr tape-slider__next"></div>
+					<div class="tape-slider__scrollbar">
+						<div class="tape-slider__handle">
+							<div class="tape-slider__mousearea"></div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!--similar products end-->
 			<!--popup footer end-->
 		</div>
 	</div>
