--- a/contacts.html
+++ b/contacts.html
@@ -30,7 +30,7 @@
 	<div class="prl-cont">
 		<div class="prl-icon"></div>
 		<div class="prl-logo">
-			<span class="prl-text">Loading...</span>
+			<div class="prl-text">Loading <span class="prl-dot">.</span><span class="prl-dot">.</span><span class="prl-dot">.</span></div>
 		</div>
 	</div>
 </div>
